# AgentOBSDebug

./: CHANGELOG.md  README.md  implementationplan.md  pyproject.toml
.github/workflows/: ci.yml
agentobs_debug/: __init__.py  attribution.py  cli.py  cost.py  decisions.py  diff.py  errors.py  filter.py  inspect.py  loader.py  replay.py  report.py  timeline.py  tools.py  tree.py
docs/: api-reference.md
docs/tutorial/: index.md
tests/: conftest.py  generate_large_fixture.py  test_attribution.py  test_cli.py  test_cost.py  test_decisions.py  test_diff.py  test_filter.py  test_inspect.py  test_loader.py  test_output_formats.py  test_performance.py  test_public_api.py  test_replay.py  test_report.py  test_timeline.py  test_tools.py  test_tree.py
tests/fixtures/: sample_events.jsonl
