[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentobs-debug"
version = "0.1.0"
description = "Developer tools for inspecting and debugging AgentOBS traces"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "agentobs>=1.0",
]

[project.scripts]
agentobs-debug = "agentobs_debug.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pytest-benchmark>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentobs_debug"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["agentobs_debug"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
